--- a/Demo1/2.html
+++ b/Demo1/2.html
@@ -1,3 +1,4 @@
+<!--html5申明规范-->
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -24,7 +25,7 @@
                         $this.height($this.height());
                 });
             };
-
+            $.fn.extend('div').__defineGetter__('es').destroy();
             //定义默认值
             $.fn.tooltip=function(options){
                 //方法一
